--- a/public/style.css
+++ b/public/style.css
@@ -28,7 +28,7 @@ body {
   height: 100%; /* relative to nearest positioned ancestor and not nearest block-level ancestor - alternatively: height: 100vh; */ 
   object-fit: cover;
   z-index:-1;
-  /* filter: brightness(50%); */ /* 0% black, 100% original image, values > 100% are allowed for brighter than original image. */
+  /* filter: brightness(125%) contrast(110%); */
   /* display: none; */
   opacity: 0;
   transition: opacity 0.75s ease-in-out;
