--- a/public/style.css
+++ b/public/style.css
@@ -39,7 +39,7 @@ body {
 } */
 .intro .intro-header {
   border-radius: 0.5rem;
-  padding: 2rem 2.5rem;
+  padding: 1rem 1.5rem;
   background-color: rgba(0,0,0,0.5);
   background-image: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,0.05));
 
@@ -51,8 +51,17 @@ body {
   font-size: 2rem;
   margin-bottom: 0.75rem;
 }
+.intro h2 {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+.intro h3 {
+  font-size: 0.75rem;
+  margin-bottom: 0.5rem;
+}
 .intro p {
-  font-size: 1rem;
+  color: darkgray;
+  font-size: 0.75rem;
 }
 
 @media (max-width: 700px) {
