--- a/public/style.css
+++ b/public/style.css
@@ -27,11 +27,11 @@ body {
   width: 100%; /* relative to nearest positioned ancestor and not nearest block-level ancestor - alternatively: width: 100vw; */
   height: 100%; /* relative to nearest positioned ancestor and not nearest block-level ancestor - alternatively: height: 100vh; */ 
   object-fit: cover;
-  z-index:-1;  
+  /*z-index:-1;  
   /* filter: brightness(125%) contrast(110%); */
   /* display: none; */
-  opacity: 0;
-  transition: opacity 0.75s ease-in-out;
+  /* opacity: 0; */
+  /*transition: opacity 0.75s ease-in-out;*/
 }
 /* .intro-slideshow img:first-child {
   display: block;
