--- a/web/assets/css/main.css
+++ b/web/assets/css/main.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
 @import url(fontawesome-all.min.css);
 @import url("https://fonts.googleapis.com/css?family=Roboto:400,700");
 
@@ -140,7 +141,7 @@ input, select, textarea {
 	}
 
 	body, input, select, textarea {
-		font-family: "Roboto", Helvetica, sans-serif;
+		font-family: "Montserrat", "Roboto", Helvetica, sans-serif;
 		font-weight: 400;
 		line-height: 1.65;
 		font-size: 1em;
