--- a/web/assets/css/main.css
+++ b/web/assets/css/main.css
@@ -174,6 +174,7 @@ input, select, textarea {
 
 	p {
 		margin: 0 0 1.25em 0;
+		font-size: 0.5vw;
 	}
 
 	h1, h2, h3, h4, h5, h6 {
@@ -189,11 +190,13 @@ input, select, textarea {
 		}
 
 	h2 {
-		font-size: 1.25em;
+		/*font-size: 1.25em;*/
+		font-size: 1.25vw;
 	}
 
 	h3 {
-		font-size: 1em;
+		/*font-size: 1em;*/
+		font-size: 0.75vw;
 	}
 
 	h4 {
@@ -1220,6 +1223,10 @@ input, select, textarea {
 
 				#viewer .slide .caption h2, #viewer .slide .caption h3, #viewer .slide .caption h4, #viewer .slide .caption h5, #viewer .slide .caption h6 {
 					color: #fff;
+				}
+
+				#viewer .slide .caption h3 {
+					color: darkgray;
 				}
 
 			#viewer .slide .image {
