--- a/web/assets/css/main.css
+++ b/web/assets/css/main.css
@@ -933,12 +933,23 @@ input, select, textarea {
 /* Header */
 
 	#header {
-		padding: 3em 2.25em 1.75em 2.25em ;
+		padding: 0.5em 0.5em 0.5em 0.5em ;
 	}
 
-		#header h1 {
-			font-size: 2.25em;
+		#header img {
+			float: left;
+		}
+
+		#header h2 {
+			font-size: 1.25em;
 			font-weight: 700;
+			text-align: left;
+			padding-top: 0.6em;
+			padding-left: 3.5em;
+		}
+		#header h3 {
+			font-size: 0.5em;
+			font-weight:bold;
 		}
 
 /* Footer */
