--- a/web/manage/assets/css/main.css
+++ b/web/manage/assets/css/main.css
@@ -2270,7 +2270,9 @@ button,
       font-size: 0.8em; }
     #menu > ul > li > ul > li {
       margin: 0.125em 0 0 0;
-      padding: 0.125em 0 0 0; }
+      padding: 0.125em 0 0 0; 
+      cursor: pointer;
+    }
   #menu > ul > li:first-child {
     border-top: 0;
     margin-top: 0;
