--- a/web/manage/assets/css/main.css
+++ b/web/manage/assets/css/main.css
@@ -1203,7 +1203,7 @@ input[type="radio"] + label:before {
     text-rendering: auto;
     line-height: 1;
     text-transform: none !important;
-    font-family: 'Font Awesome 5 Free';
+    /* font-family: 'Font Awesome 5 Free'; */
     font-weight: 400; }
   .icon > .label {
     display: none; }
@@ -1211,8 +1211,8 @@ input[type="radio"] + label:before {
     line-height: inherit; }
   .icon.solid:before {
     font-weight: 900; }
-  .icon.brands:before {
-    font-family: 'Font Awesome 5 Brands'; }
+  /* .icon.brands:before {
+    font-family: 'Font Awesome 5 Brands'; } */
 
 /* Image */
 .image {
