--- a/web/manage/assets/css/main.css
+++ b/web/manage/assets/css/main.css
@@ -1482,6 +1482,7 @@ table {
     table.alt tfoot {
       border-top: 0; }
 
+      
 /* Button */
 input[type="submit"],
 input[type="reset"],
@@ -1583,6 +1584,7 @@ button,
   .button:disabled {
     pointer-events: none;
     opacity: 0.25; }
+
 
 /* Mini Posts */
 .mini-posts article {
@@ -2277,3 +2279,36 @@ button,
     border-top: 0;
     margin-top: 0;
     padding-top: 0; }
+
+
+    dialog {
+      padding: 1rem 3rem;
+      background: white;
+      max-width: 500px;
+      padding-top: 2rem;
+      border-radius: 20px;
+      border: 0;
+      box-shadow: 0 5px 30px 0 rgb(0 0 0 / 10%);
+      animation: fadeIn 1s ease both;
+      &::backdrop {
+        animation: fadeIn 1s ease both;
+        background: rgb(255 255 255 / 40%);
+        z-index: 2;
+        backdrop-filter: blur(20px);
+      }
+      .x {
+        filter: grayscale(1);
+        border: none;
+        background: none;
+        position: absolute;
+        top: 15px;
+        right: 10px;
+        transition: ease filter, transform 0.3s;
+        cursor: pointer;
+        transform-origin: center;
+        &:hover {
+          filter: grayscale(0);
+          transform: scale(1.1);
+        }
+      }
+    }
