--- a/web/manage/assets/css/main.css
+++ b/web/manage/assets/css/main.css
@@ -112,21 +112,21 @@ a {
   -ms-transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
   transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
   border-bottom: dotted 1px;
-  color: #9C27B0;
+  color: #f56a6a;
   text-decoration: none; }
   a:hover {
-    border-bottom-color: #9C27B0;
-    color: #9C27B0 !important; }
+    border-bottom-color: #f56a6a;
+    color: #f56a6a !important; }
     a:hover strong {
       color: inherit; }
 
 strong, b {
-  color: #d745fa;
+  color: #3d4449;
   font-weight: 600; }
 
 em, i {
   font-style: italic; }
-
+  
 p {
   margin: 0 0 0 0; }
 
@@ -135,7 +135,7 @@ p {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  color: #d745fa;
+  color: #3d4449;
   font-family: "Roboto Slab", serif;
   font-weight: 700;
   line-height: 1.5;
@@ -1002,7 +1002,7 @@ header p {
   text-transform: uppercase; }
 
 header.major > :last-child {
-  border-bottom: solid 3px #9C27B0;
+  border-bottom: solid 3px #f56a6a;
   display: inline-block;
   margin: 0 0 2em 0;
   padding: 0 0.75em 0.5em 0; }
@@ -1015,7 +1015,7 @@ form {
   margin: 0 0 2em 0; }
 
 label {
-  color: #d745fa;
+  color: #3d4449;
   display: block;
   font-size: 0.9em;
   font-weight: 600;
@@ -1037,7 +1037,7 @@ textarea {
   border-radius: 0.375em;
   border: none;
   border: solid 1px rgba(210, 215, 217, 0.75);
-  color: #9C27B0;
+  color: inherit;
   display: block;
   outline: 0;
   padding: 0 1em;
@@ -1060,8 +1060,8 @@ textarea {
   input[type="url"]:focus,
   select:focus,
   textarea:focus {
-    border-color: #9C27B0;
-    box-shadow: 0 0 0 1px #9C27B0; }
+    border-color: #f56a6a;
+    box-shadow: 0 0 0 1px #f56a6a; }
 
 select {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' preserveAspectRatio='none' viewBox='0 0 40 40'%3E%3Cpath d='M9.4,12.3l10.4,10.4l10.4-10.4c0.2-0.2,0.5-0.4,0.9-0.4c0.3,0,0.6,0.1,0.9,0.4l3.3,3.3c0.2,0.2,0.4,0.5,0.4,0.9 c0,0.4-0.1,0.6-0.4,0.9L20.7,31.9c-0.2,0.2-0.5,0.4-0.9,0.4c-0.3,0-0.6-0.1-0.9-0.4L4.3,17.3c-0.2-0.2-0.4-0.5-0.4-0.9 c0-0.4,0.1-0.6,0.4-0.9l3.3-3.3c0.2-0.2,0.5-0.4,0.9-0.4S9.1,12.1,9.4,12.3z' fill='rgba(210, 215, 217, 0.75)' /%3E%3C/svg%3E");
@@ -1072,7 +1072,7 @@ select {
   padding-right: 2.75em;
   text-overflow: ellipsis; }
   select option {
-    color: #d745fa;
+    color: #3d4449;
     background: #ffffff; }
   select:focus::-ms-value {
     background-color: transparent; }
@@ -1143,14 +1143,14 @@ input[type="radio"] {
       width: 2.0625em; }
   input[type="checkbox"]:checked + label:before,
   input[type="radio"]:checked + label:before {
-    background: #d745fa;
-    border-color: #d745fa;
+    background: #3d4449;
+    border-color: #3d4449;
     color: #ffffff;
     content: '\f00c'; }
   input[type="checkbox"]:focus + label:before,
   input[type="radio"]:focus + label:before {
-    border-color: #9C27B0;
-    box-shadow: 0 0 0 1px #9C27B0; }
+    border-color: #f56a6a;
+    box-shadow: 0 0 0 1px #f56a6a; }
 
 input[type="checkbox"] + label:before {
   border-radius: 0.375em; }
@@ -1203,7 +1203,7 @@ input[type="radio"] + label:before {
     text-rendering: auto;
     line-height: 1;
     text-transform: none !important;
-    /* font-family: 'Font Awesome 5 Free'; */
+    font-family: 'Font Awesome 5 Free';
     font-weight: 400; }
   .icon > .label {
     display: none; }
@@ -1211,8 +1211,8 @@ input[type="radio"] + label:before {
     line-height: inherit; }
   .icon.solid:before {
     font-weight: 900; }
-  /* .icon.brands:before {
-    font-family: 'Font Awesome 5 Brands'; } */
+  .icon.brands:before {
+    font-family: 'Font Awesome 5 Brands'; }
 
 /* Image */
 .image {
@@ -1380,7 +1380,7 @@ ul.contact {
       font-family: 'Font Awesome 5 Free';
       font-weight: 400; }
     ul.contact li:before {
-      color: #9C27B0;
+      color: #f56a6a;
       display: inline-block;
       font-size: 1.5em;
       height: 1.125em;
@@ -1425,10 +1425,10 @@ ul.pagination {
       padding: 0 0.5em;
       text-align: center; }
       ul.pagination li > .page.active {
-        background-color: #9C27B0;
+        background-color: #f56a6a;
         color: #ffffff !important; }
         ul.pagination li > .page.active:hover {
-          background-color: #d745fa; }
+          background-color: #f67878; }
         ul.pagination li > .page.active:active {
           background-color: #f45c5c; }
     ul.pagination li:first-child {
@@ -1458,7 +1458,7 @@ table {
   table td {
     padding: 0.75em 0.75em; }
   table th {
-    color: #d745fa;
+    color: #3d4449;
     font-size: 0.9em;
     font-weight: 600;
     padding: 0 0.75em 0.75em 0.75em;
@@ -1482,7 +1482,6 @@ table {
     table.alt tfoot {
       border-top: 0; }
 
-      
 /* Button */
 input[type="submit"],
 input[type="reset"],
@@ -1500,8 +1499,8 @@ button,
   background-color: transparent;
   border-radius: 0.375em;
   border: 0;
-  box-shadow: inset 0 0 0 2px #9C27B0;
-  color: #9C27B0 !important;
+  box-shadow: inset 0 0 0 2px #f56a6a;
+  color: #f56a6a !important;
   cursor: pointer;
   display: inline-block;
   font-family: "Roboto Slab", serif;
@@ -1558,7 +1557,7 @@ button,
   input[type="button"].primary,
   button.primary,
   .button.primary {
-    background-color: #9C27B0;
+    background-color: #f56a6a;
     box-shadow: none;
     color: #ffffff !important; }
     input[type="submit"].primary:hover,
@@ -1566,7 +1565,7 @@ button,
     input[type="button"].primary:hover,
     button.primary:hover,
     .button.primary:hover {
-      background-color: #d745fa; }
+      background-color: #f67878; }
     input[type="submit"].primary:active,
     input[type="reset"].primary:active,
     input[type="button"].primary:active,
@@ -1584,7 +1583,6 @@ button,
   .button:disabled {
     pointer-events: none;
     opacity: 0.25; }
-
 
 /* Mini Posts */
 .mini-posts article {
@@ -1648,7 +1646,7 @@ button,
       text-align: center;
       width: 10em; }
       .features article .icon:before {
-        color: #9C27B0;
+        color: #f56a6a;
         font-size: 2.75rem;
         position: relative;
         top: 0.05em; }
@@ -2081,7 +2079,7 @@ button,
   display: -webkit-flex;
   display: -ms-flex;
   display: flex;
-  border-bottom: solid 5px #9C27B0;
+  border-bottom: solid 5px #f56a6a;
   padding: 6em 0 1em 0;
   position: relative; }
   #header > * {
@@ -2204,7 +2202,7 @@ button,
   -webkit-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  color: #d745fa;
+  color: #3d4449;
   font-family: "Roboto Slab", serif;
   font-weight: 400;
   letter-spacing: 0.075em;
@@ -2220,7 +2218,7 @@ button,
     font-size: 0.9em;
     padding: 0.625em 0; }
     #menu ul a:hover, #menu ul span:hover {
-      color: #9C27B0; }
+      color: #f56a6a; }
     #menu ul a.opener, #menu ul span.opener {
       -moz-transition: color 0.2s ease-in-out;
       -webkit-transition: color 0.2s ease-in-out;
@@ -2250,7 +2248,7 @@ button,
         position: absolute;
         right: 0; }
       #menu ul a.opener:hover:before, #menu ul span.opener:hover:before {
-        color: #9C27B0; }
+        color: #f56a6a; }
       #menu ul a.opener.active + ul, #menu ul span.opener.active + ul {
         display: block; }
       #menu ul a.opener.active:before, #menu ul span.opener.active:before {
@@ -2272,43 +2270,8 @@ button,
       font-size: 0.8em; }
     #menu > ul > li > ul > li {
       margin: 0.125em 0 0 0;
-      padding: 0.125em 0 0 0; 
-      cursor: pointer;
-    }
+      padding: 0.125em 0 0 0; }
   #menu > ul > li:first-child {
     border-top: 0;
     margin-top: 0;
     padding-top: 0; }
-
-
-    dialog {
-      padding: 1rem 3rem;
-      background: white;
-      max-width: 500px;
-      padding-top: 2rem;
-      border-radius: 20px;
-      border: 0;
-      box-shadow: 0 5px 30px 0 rgb(0 0 0 / 10%);
-      animation: fadeIn 1s ease both;
-      &::backdrop {
-        animation: fadeIn 1s ease both;
-        background: rgb(255 255 255 / 40%);
-        z-index: 2;
-        backdrop-filter: blur(20px);
-      }
-      .x {
-        filter: grayscale(1);
-        border: none;
-        background: none;
-        position: absolute;
-        top: 15px;
-        right: 10px;
-        transition: ease filter, transform 0.3s;
-        cursor: pointer;
-        transform-origin: center;
-        &:hover {
-          filter: grayscale(0);
-          transform: scale(1.1);
-        }
-      }
-    }
