--- a/web/manage/assets/css/main.css
+++ b/web/manage/assets/css/main.css
@@ -150,6 +150,36 @@ p {
   }
 }
 
+.erow {
+  margin-bottom: 10px;
+  display: flex;
+  gap: 10px;
+}
+.erow label {
+  min-width: 100px;
+}
+.hidden {
+  display: none;
+}
+
+.message {
+  margin-top: 10px;
+  padding: 10px;
+  border-radius: 5px;
+  text-align: center;
+  font-weight: bold;
+}
+.success {
+  background-color: #d4edda;
+  color: #155724;
+  border: 1px solid #c3e6cb;
+}
+.error {
+  background-color: #f8d7da;
+  color: #721c24;
+  border: 1px solid #f5c6cb;
+}
+
 h1, h2, h3, h4, h5, h6 {
   color: #3d4449;
   font-family: "Roboto Slab", serif;
