--- a/web/manage/assets/css/search.css
+++ b/web/manage/assets/css/search.css
@@ -1,14 +1,3 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: #f5f5f5;
-}
-
 .modal {
     display: none;
     position: fixed;
@@ -109,4 +98,18 @@ body {
 
 #load-more.show {
     display: block;
+}
+
+.notification-container {
+    position: fixed;
+    top: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #4CAF50;
+    color: white;
+    padding: 15px;
+    border-radius: 5px;
+    display: none;
+    opacity: 1;
+    transition: opacity 1s ease-out;
 }
