--- a/web/manage/assets/css/main.css
+++ b/web/manage/assets/css/main.css
@@ -1077,7 +1077,7 @@ label {
   display: block;
   font-size: 0.9em;
   font-weight: 600;
-  margin: 0 0 1em 0; }
+  /*margin: 0 0 1em 0; */}
 
 input[type="text"],
 input[type="password"],
