--- a/web/manage/assets/css/main.css
+++ b/web/manage/assets/css/main.css
@@ -2339,3 +2339,17 @@ button,
     border-top: 0;
     margin-top: 0;
     padding-top: 0; }
+
+  .notification-container {
+      position: fixed;
+      top: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      background-color: #4CAF50;
+      color: white;
+      padding: 15px;
+      border-radius: 5px;
+      display: none;
+      opacity: 1;
+      transition: opacity 1s ease-out;
+  }
