--- a/web/manage/assets/css/main.css
+++ b/web/manage/assets/css/main.css
@@ -161,9 +161,38 @@ p {
 .hidden {
   display: none;
 }
-#dialog {
-  min-width: 500px;
+dialog { 
+  padding: 20px;
+  border: 2px solid rgba(200, 200, 200, 0.6); /* Light border */
+  border-radius: 10px; /* Smooth corners */
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1); /* Soft shadow */
+  font-size: 16px;
+  background: white;
 }
+
+/* Optional: Style for backdrop */
+dialog::backdrop {
+  background: rgba(0, 0, 0, 0.3); /* Semi-transparent overlay */
+}
+
+ /* Close button styles */
+ .close-btn {
+  position: absolute;
+  top: 3px;
+  right: 3px;
+  background: none;
+  border: none;
+  font-size: 10px;
+  font-weight: bold;
+  cursor: pointer;
+  color: #555;
+}
+
+.close-btn:hover {
+  color: #000;
+}
+
+
 .message {
   margin-top: 10px;
   padding: 10px;
