--- a/web/manage/assets/css/main.css
+++ b/web/manage/assets/css/main.css
@@ -163,16 +163,16 @@ p {
 }
 dialog { 
   padding: 20px;
-  border: 2px solid rgba(200, 200, 200, 0.6); /* Light border */
-  border-radius: 10px; /* Smooth corners */
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1); /* Soft shadow */
+  border: 2px solid rgba(200, 200, 200, 0.6);
+  border-radius: 10px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   font-size: 16px;
   background: white;
 }
 
-/* Optional: Style for backdrop */
+
 dialog::backdrop {
-  background: rgba(0, 0, 0, 0.3); /* Semi-transparent overlay */
+  background: rgba(0, 0, 0, 0.3);
 }
 
  /* Close button styles */
