--- a/web/manage/assets/css/main.css
+++ b/web/manage/assets/css/main.css
@@ -159,6 +159,7 @@ p {
   min-width: 100px;
 }
 .hidden {
+  opacity: 0;
   display: none;
 }
 dialog { 
@@ -2379,5 +2380,6 @@ button,
       border-radius: 5px;
       display: none;
       opacity: 1;
-      transition: opacity 1s ease-out;
+      transition: opacity 0.5s ease, max-height 0.5s ease;
+      overflow: hidden;
   }
