--- a/web/manage/assets/css/search.css
+++ b/web/manage/assets/css/search.css
@@ -150,6 +150,19 @@ dialog {
     color: #F67878;
 }
 
+.icons {
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.eyedeea-header{
+    display: table;
+    width: 70vw;
+}
 /*
 .g-search {
     display: none;
