--- a/web/manage/assets/css/search.css
+++ b/web/manage/assets/css/search.css
@@ -161,8 +161,53 @@ dialog {
 
 .eyedeea-header{
     display: table;
-    width: 70vw;
 }
+
+.logo {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    grid-template-rows: auto auto;
+    align-items: center;
+    text-decoration: none;
+    color: inherit;
+    column-gap: 15px;
+}
+
+.logo img {
+    grid-row: span 2;
+    width: 20vw;
+    height: auto;
+    content: url('../../../images/Eyedeea_Photos_m_logo.png');
+}
+
+@media (min-width: 768px) {
+    .logo img {
+        width: 5vw;
+    }
+}
+
+.logo h2 {
+    grid-column: 2;
+    margin: 0;
+    align-self: end;
+    font-weight: bold;
+    font-size: 1.5em;
+    
+}
+
+.logo h3 {
+    grid-column: 2;
+    margin: 0;
+    align-self: start;
+    padding-left: 10px;
+    color: #F67878;
+    font-weight: bold;
+    font-size: 1.2em;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);    
+    padding-bottom: 3px;
+    
+}
+
 /*
 .g-search {
     display: none;
