sonarqube default font

--- a/web/assets/css/main.css
+++ b/web/assets/css/main.css
@@ -461,7 +461,7 @@ input, select, textarea {
 			text-rendering: auto;
 			line-height: 1;
 			text-transform: none !important;
-			font-family: 'Font Awesome 5 Free';
+			font-family: 'Font Awesome 5 Free', sans-serif;
 			font-weight: 900;
 		}
 
@@ -532,7 +532,7 @@ input, select, textarea {
 				text-rendering: auto;
 				line-height: 1;
 				text-transform: none !important;
-				font-family: 'Font Awesome 5 Free';
+				font-family: 'Font Awesome 5 Free', sans-serif;
 				font-weight: 900;
 			}
 
@@ -617,7 +617,7 @@ input, select, textarea {
 			text-rendering: auto;
 			line-height: 1;
 			text-transform: none !important;
-			font-family: 'Font Awesome 5 Free';
+			font-family: 'Font Awesome 5 Free', sans-serif;
 			font-weight: 400;
 		}
 
