--- a/web/manage/assets/sass/libs/_mixins.scss
+++ b/web/manage/assets/sass/libs/_mixins.scss
@@ -25,11 +25,11 @@
 			font-family: 'Font Awesome 5 Brands';
 		}
 		@elseif ($category == solid) {
-			font-family: 'Font Awesome 5 Free';
+			font-family: 'Font Awesome 5 Free', sans-serif;
 			font-weight: 900;
 		}
 		@else {
-			font-family: 'Font Awesome 5 Free';
+			font-family: 'Font Awesome 5 Free', sans-serif;
 			font-weight: 400;
 		}
 
