--- a/web/manage/assets/css/search.css
+++ b/web/manage/assets/css/search.css
@@ -58,10 +58,10 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    display: none; /* Hidden by default */
+    display: none;
     justify-content: center;
     align-items: center;            
-    background: rgba(255, 255, 255, 0.8); /* Optional: Adds a semi-transparent overlay */
+    background: rgba(255, 255, 255, 0.8);
 }
 
 .loader {
@@ -74,6 +74,37 @@
     background: url('../../../images/eyedeea_loading.gif') no-repeat center center;
     background-size: contain;
 }
+
+
+.scanner-loader {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    grid-template-rows: auto auto;
+    align-items: center;
+    text-decoration: none;
+    color: inherit;    
+    column-gap: 15px;
+}
+
+.scanner-loader a {
+    grid-row: span 2;
+    
+}
+
+.scanner-loader img {
+    grid-column: 2;
+    width: 20vw;
+    height: auto;
+    display: none;
+    content: url('../../../images/eyedeea_loading.gif');
+}
+
+@media (min-width: 768px) {
+    .scanner-loader img {
+        width: 5vw;
+    }
+}
+
 
 .gallery {
     display: grid;
@@ -208,76 +239,3 @@ dialog {
     
 }
 
-/*
-.g-search {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.8);
-    justify-content: center;
-    align-items: center;
-    
-}
-
- .g-search-content {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    
-    max-height: 90%;
-    overflow-y: auto;
-    position: relative;
-}
-
-.g-search-search-bar {
-    display: flex;
-    gap: 10px;
-    margin-bottom: 10px;
-}
-
-.g-search-search-bar input {
-    padding: 8px;
-    font-size: 14px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    flex: 1;
-    
-}
-
-#loader-container {
-    position: fixed;
-    bottom: 10%;
-    left: 50%;
-    transform: translateX(-50%);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.loader-wrapper {
-    position: relative;
-    width: 489px;
-    height: 279px;
-}
-
-.loader-logo {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 0;
-}
-
-.loader-gif {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 1; 
-}
-*/
