--- a/web/manage/assets/css/main.css
+++ b/web/manage/assets/css/main.css
@@ -176,19 +176,29 @@ dialog::backdrop {
   background: rgba(0, 0, 0, 0.3);
 }
 
- .close-btn {
+.close-btn {
   position: absolute;
-  top: 1px;
+  top: 5px;
   right: 10px;
   background: none;
   border: none;
-  font-size: 10px;
+  font-size: 1.5em;
   font-weight: bold;
   cursor: pointer;
   color: #555;
+  line-height: 1;
+  padding: 2px 5px;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;  
+  transition: background 0.2s, color 0.2s;
 }
 
+
 .close-btn:hover {
+  background: #ddd;
   color: #000;
 }
 
