--- a/web/manage/assets/css/main.css
+++ b/web/manage/assets/css/main.css
@@ -3929,7 +3929,7 @@ button:disabled,
   -webkit-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  color: #3d4449;
+  color: #222;
   font-family: "Roboto Slab", serif;
   font-weight: 400;
   letter-spacing: 0.075em;
@@ -4016,7 +4016,7 @@ button:disabled,
 }
 
 #menu>ul>li>ul {
-  color: #9fa3a6;
+  color: #333;
   display: none;
   margin: 0.5em 0 1.5em 0;
   padding-left: 1em;
