--- a/web/manage/assets/css/main.css
+++ b/web/manage/assets/css/main.css
@@ -2546,7 +2546,7 @@ input[type="radio"]+label:before {
 }
 
 .icon.brands:before {
-  font-family: 'Font Awesome 5 Brands';
+  font-family: 'Font Awesome 5 Brands', sans-serif;
 }
 
 /* Image */
