--- a/apps/android/app/src/mobile/res/layout/activity_main.xml
+++ b/apps/android/app/src/mobile/res/layout/activity_main.xml
@@ -14,9 +14,9 @@
         android:id="@+id/settingsIcon"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_gravity="bottom|end"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_gravity="top|start"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:padding="12dp"
         android:src="@drawable/ic_settings"
         android:contentDescription="@string/app_name"/>
